...
import androidx.compose.material.icons.outlined.Videocam
import androidx.compose.ui.graphics.vector.ImageVector
import androidx.navigation.NavHostController

object Route {
  const val OVERVIEW = "Overview"
  const val SCANNER = "Scanner"
  const val PROFILE = "Profile"
  const val RECIPES = "Recipes"
  const val AUTH = "Auth"
  const val INVITATIONS = "Invitations"
  const val FIRST_TIME_USER = "First Time User"
}

object Screen {
...
